<resources>
    <string name="app_name">Message Me</string>

    <string name="action_settings">Settings</string>

    <string name="userNameHint">User Name</string>
    <string name="passwordHint">Password</string>
    <string name="loginText">Login</string>
    <string name="createAccount">Create New Account</string>
    <string name="createNewAccount">createNewAccountOnClick</string>
    <string name="loginOnClick">loginOnClick</string>
    <string name="signUpUserNameHint">User Name</string>
    <string name="emailHint">Email</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="signUpButtonText">Sign up</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="cancelOnClick">cancelOnClick</string>
    <string name="signUpOnClick">signUpOnClick</string>
    <string name="messageTitle">Message:</string>
    <string name="sendButtonText">Send</string>
    <string name="sendMessageOnClick">sendMessageOnClick</string>
    <string name="firstName">FirstName LastName</string>
    <string name="messageBody">Lorem ipsum dolor sit amet, pri minim instructior an, dicit deleniti mea ex. Eum id affert dolores, at has illud eirmod complectitur. Cum diam iriure suavitate ex, prima vidisse sea ut. Quo ex viris lucilius indoctum, dico intellegebat nam ut</string>
    <string name="dateText">MM/DD/YYYY HH:MM</string>
</resources>
