<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group6a_inclass09.group6a_inclass09.signUpFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/editTextUserName"
            android:hint="@string/signUpUserNameHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:hint="@string/emailHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:hint="@string/passwordHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:id="@+id/editTextConfirmPassword"
            android:hint="@string/confirmPasswordHint" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpButtonText"
            android:layout_marginTop="80dp"
            android:id="@+id/buttonSignUp"
            android:onClick="@string/signUpOnClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelButtonText"
            android:id="@+id/buttonCancel"
            android:onClick="@string/cancelOnClick" />

    </LinearLayout>

</FrameLayout>
