<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group6a_inclass09.group6a_inclass09.composeMessageFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/messageTitle"
            android:id="@+id/textViewMessageTitle"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendButtonText"
            android:id="@+id/buttonSendText"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="@string/sendMessageOnClick" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextMessage"
            android:layout_below="@+id/textViewMessageTitle"
            android:maxLength="120"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/buttonSendText" />

    </RelativeLayout>
</FrameLayout>
